--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess the word</title>
+    <title>Guess the Country</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header starts here -->
     <Header>
-       <h1>Guess the Word game</h1>
+       <h1>Guess the Country game</h1>
     </Header>
     <!-- Header ends here -->
 
@@ -27,7 +27,7 @@
 
     <!-- Footer starts here -->
     <footer>
-
+        @created by Anjali Soni
     </footer>
     <!-- Footer ends here -->
     <script src="script.js"></script>
